--- a/interfaz_venta/package.json
+++ b/interfaz_venta/package.json
@@ -4,37 +4,24 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
-    "@progress/kendo-data-query": "^1.5.5",
-    "@progress/kendo-drawing": "^1.15.0",
-    "@progress/kendo-licensing": "^1.2.0",
-    "@progress/kendo-react-animation": "^4.9.0",
-    "@progress/kendo-react-data-tools": "^4.9.0",
-    "@progress/kendo-react-dateinputs": "^4.9.0",
-    "@progress/kendo-react-dropdowns": "^4.9.0",
-    "@progress/kendo-react-grid": "^4.9.0",
-    "@progress/kendo-react-inputs": "^4.9.0",
-    "@progress/kendo-react-intl": "^4.9.0",
-    "@progress/kendo-react-treeview": "^4.9.0",
-    "@progress/kendo-theme-default": "^4.41.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
     "express": "^4.17.1",
     "firebase": "^9.1.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-bootstrap-table-next": "^4.0.3",
-    "react-date-picker": "^8.3.4",
     "react-dom": "^17.0.2",
     "react-native": "^0.66.0",
-    "react-native-multiple-select": "^0.5.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^3.1.0",
     "web-vitals": "^1.1.2"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "scripts": {
     "start": "react-scripts start",
